--- a/index.org
+++ b/index.org
@@ -34,8 +34,15 @@ refresh-packages
 
 #+RESULTS:
 ** 2020-11-16 Emacs news
+   :PROPERTIES:
+   :ID:       o2b:7582f2a3-51bf-45c4-a4c1-c7e99ae092c3
+   :POST_DATE: [2020-11-16 Mon 22:35]
+   :POSTID:   29637
+   :BLOG:     sacha
+   :END:
 
 - [[https://lists.gnu.org/r/emacsconf-discuss/2020-11/msg00000.html][EmacsConf 2020 schedule, poster, watching, and participating]] ([[https://www.reddit.com/r/emacs/comments/jrmabk/emacsconf_2020_schedule_poster_how_to_watch_and/][Reddit]]) - Nov 28, 29
+- [[https://www.reddit.com/r/emacs/comments/je3eht/emacs_user_survey_2020_is_open/][Emacs User Survey 2020 is open!]]
 - Emacs configuration:
   - [[https://tech.toryanderson.com/2020/11/13/migrating-to-a-custom-file-less-setup/][Tory Anderson: Migrating to a custom-file-less setup]]
   - [[https://github.com/mohkale/spaceleader][spaceleader: emacs leader-key implementation from spacemacs]]
